# cmd/server/docs/swagger.json
@@ -2,16 +2,11 @@
     "swagger": "2.0",
     "info": {
         "description": "API for managing proxy rules and iptables.",
-        "title": "Go Reauth Proxy Admin API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
+        "title": "Go-Reauth-Proxy",
+        "contact": {},
         "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "name": "MIT",
+            "url": "https://opensource.org/license/MIT"
         },
         "version": "1.0"
     },
